--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -196,26 +196,32 @@ nav a:hover {
     font-weight: lighter;
 }
 
-/*-------------------Over mij--------------*/
+/*-------------------Nieuws--------------*/
 
-#over {
+#nieuws {
     background-color: white;
 }
 
+/*-------------------Over mij--------------*/
+
+#over {
+    background-color: #AE092A;
+}
+
 .wie--is {
-    color: red;
+    color: white;
     font-weight: bolder;
     font-size: 30px;
 }
 
 .dikgedrukt--over {
-    color: red;
+    color: white;
     font-weight: bolder;
     font-size: 25px;
 }
 
 .ik-ben {
-    color: red;
+    color: white;
     font-size: 21px;
     display: inline;
 }
@@ -223,15 +229,11 @@ nav a:hover {
 /*contact*/
 
 #contact {
-    background-color: #AE092A;
+    background-color: white;
 }
 
 .contact {
     margin-top: 50px;
-}
-
-.contact-info {
-    padding-top: 50px;
 }
 
 .info-item {
@@ -242,7 +244,7 @@ nav a:hover {
 }
 
 .info-contact {
-    color: white;
+    color: #AE092A;
     font-size: large;
     font-weight: bolder;
 }
@@ -251,43 +253,50 @@ nav a:hover {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: white;
+    background: #AE092A;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     margin-bottom: 40px;
     font-size: 20px;
-    color: #AE092A;
+    color: white;
 }
 
 form {
-    background-color: white;
+    background-color: #AE092A;
     text-align: center;
 }
 
 .form-group {
     display: flex;
     flex-direction: column;
-    max-width: 650px;
+    max-width: 800px;
     margin: auto;
-    margin-bottom: 20px;
+    padding: 20px;
+}
+
+label {
+    color: white;
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 10px;
 }
 
 .form-control {
     padding: 10px;
-    border: 3px solid #AE092A;
+    border: 3px solid white;
 }
 
 .send-button {
     padding: 20px;
-    background-color: #AE092A;
-    color: white;
+    background-color: white;
     font-size: 17px;
     font-weight: bolder;
     max-width: 300px;
     margin: auto;
     border: none;
+    color: #AE092A;
 }
 
 
@@ -295,13 +304,13 @@ form {
 
 .copyright,
 .floris-codes {
-    color: white;
+    color: #AE092A;
     font-weight: bolder;
     text-align: center;
     display: block;
     text-align: center;
     font-size: 20px;
-    background-color: #AE092A;
+    background-color: white;
 }
 
 @media only screen and (max-width: 428px) {
@@ -808,6 +817,7 @@ form {
         display: flex;
         justify-content: center;
         gap: 100px;
+        padding: 50px 0;
     }
 
     .jan-joost-over-img {
